kubernetes/grocy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grocy
  labels:
    name: grocy
