kubernetes/grocy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: grocy
  annotations:
    configmap.reloader.stakater.com/reload: "grocy-config"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grocy
  template:
    metadata:
      labels:
        app: grocy
    spec:
      containers:
      - name: grocy
        image: lscr.io/linuxserver/grocy:4.5.0
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        ports:
          - containerPort: 80
            name: http
        volumeMounts:
          - name: data
            mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grocy-data
